(DEV) Push the fist test which was created by Selenium builder

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ __pycache__/
 *.so
 
 # Distribution / packaging
+.idea
 .Python
 env/
 build/
@@ -21,9 +22,11 @@ parts/
 sdist/
 var/
 wheels/
+venv/
 *.egg-info/
 .installed.cfg
 *.egg
+cache/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
